# django-local-icons

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  setup.cfg
