[metadata]
name = django-local-icons
url = https://codeberg.org/kytta/django-local-icons
author = Nikita Karamov
author_email = me@kytta.dev
description = Use local SVG or Webfont icons, or include Iconify icon packs in your templates
long_description = file: README.rst
license = BSD 3-Clause "New" or "Revised" License
classifiers =
    Development Status :: 1 - Planning
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    django
    icons
project_urls =
    Bug Tracker = https://codeberg.org/kytta/django-local-icons/issues

[options]
packages = local_icons
include_package_data = True
python_requires = >=3.7,<4.0
install_requires =
    Django>=3.2
